media/media.ns.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: media
    name: media
  name: media
spec:
  finalizers:
    - kubernetes
