media/media.plex.service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kube-plex
  name: plex-kube-plex
  namespace: media
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: pms
    nodePort: 32081
    port: 32400
    protocol: TCP
    targetPort: pms
  - name: http
    nodePort: 32178
    port: 80
    protocol: TCP
    targetPort: pms
  - name: https
    nodePort: 32296
    port: 443
    protocol: TCP
    targetPort: 32443
  selector:
    app: kube-plex
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.3.241
