media/media.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: media
  name: media-ingress
spec:
  rules:
  - host: "media.192.168.3.240.nip.io"
    http:
      paths:
        - backend:
            service:
              name: "transmission-openvpn"
              port: 
                number: 80
          path: "/transmission"
          pathType: Prefix
        - backend:
            service:
              name: "sonarr"
              port:
                number: 80
          path: "/sonarr"
          pathType: Prefix
        - backend:
            service:
              name: "jackett"
              port:
                number: 80
          path: "/jackett"
          pathType: Prefix
        - backend:
            service:
              name: "radarr"
              port:
                number: 80
          path: "/radarr"
          pathType: Prefix
        - backend:
            service:
              name: "plex-kube-plex"
              port:
                number: 32400
          path: "/"
          pathType: Prefix
